tests/snapshots/run_wpt_conformance__onnx_concat_three_float32_5D_tensors_of_same_others_dimensions_except_different_3rd_dimension_along_axis_2.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "concat.https.any.js",
    "concat three float32 5D tensors of same others dimensions except different 3rd dimension along axis 2",
    "onnx",
    "PASS",
)
